# ShaderEngine

./: CMakeLists.txt  README.md
assets/: Frag_Template.glsl  vertex_core.glsl  vertex_core2.glsl
assets/frag/: FRAG.glsl  Falling_Into_A_Trance.glsl  Frag_Template copy.glsl  HyperCell.glsl  HyperCell2.glsl  Interstellar_Flower.glsl  Shader_1.glsl  atom.glsl  atomized.glsl  atomized_void.glsl  delete.glsl  flower.glsl  fragment_core.glsl  fragment_core1.glsl  fragment_core2.glsl  fragment_core4.glsl  fragment_core_circle2.glsl  hypervoid.glsl  idk_something_new.glsl  kuko.glsl  new.glsl  plasma_core.glsl  plasma_core2.glsl  plasma_core_sin.glsl  test.glsl  testfrag.glsl  the_portal_2.glsl  the_weave.glsl  tutorial.glsl  what_circles.glsl
assets/import/: the_weave.glsl
cmake/: Findglfw3.cmake
dependencies/glad/: glad.h
include/: GUI.h  Panel.h  Shader.h  Window.h
lib/: glad.c
src/: GUI.cpp  Panel.cpp  Shader.cpp  Window.cpp  main.cpp
